Add support for parameters in price expressions.
* Support CV initially